--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Bootcamp Website</title>
   </head>
@@ -62,7 +66,13 @@
               repellat cum ad excepturi quibusdam.
             </p>
 
-            <button class="btn btn-primary btn-lg">Start The Enrolment</button>
+            <button
+              class="btn btn-primary btn-lg"
+              data-bs-toggle="modal"
+              data-bs-target="#enrol"
+            >
+              Start The Enrolment
+            </button>
           </div>
           <img
             class="img-fluid v-50 d-none d-sm-block"
@@ -345,10 +355,221 @@
       </div>
     </section>
 
+    <section id="instructor" class="p-5 bg-primary">
+      <div class="container">
+        <h2 class="text-center text-white">Our Instructors</h2>
+
+        <p class="lead text-center text-white mb-5">
+          Our instructors all have 5+ years of working experience as a web
+          developer in the industry
+        </p>
+        <div class="row g-4">
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img
+                  src="https://randomuser.me/api/portraits/men/11.jpg"
+                  class="rounded-circle.mb-3"
+                  alt=""
+                />
+
+                <h3 class="card-title mb-3">John Doe</h3>
+                <p class="card-text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Incidunt quasi sunt esse harum dolorem accusantium.
+                </p>
+                <a href="#"> <i class="bi bi-twitter text-dark mx-1"></i> </a>
+                <a href="#"> <i class="bi bi-facebook text-dark mx-1"></i> </a>
+                <a href="#"> <i class="bi bi-linkedin text-dark mx-1"></i> </a>
+                <a href="#"> <i class="bi bi-instagram text-dark mx-1"></i> </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img
+                  src="https://randomuser.me/api/portraits/women/11.jpg"
+                  class="rounded-circle.mb-3"
+                  alt=""
+                />
+
+                <h3 class="card-title mb-3">Jane Doe</h3>
+                <p class="card-text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Incidunt quasi sunt esse harum dolorem accusantium.
+                </p>
+                <a href="#"> <i class="bi bi-twitter text-dark mx-1"></i> </a>
+                <a href="#"> <i class="bi bi-facebook text-dark mx-1"></i> </a>
+                <a href="#"> <i class="bi bi-linkedin text-dark mx-1"></i> </a>
+                <a href="#"> <i class="bi bi-instagram text-dark mx-1"></i> </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img
+                  src="https://randomuser.me/api/portraits/men/12.jpg"
+                  class="rounded-circle.mb-3"
+                  alt=""
+                />
+
+                <h3 class="card-title mb-3">Steve Smith</h3>
+                <p class="card-text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Incidunt quasi sunt esse harum dolorem accusantium.
+                </p>
+                <a href="#"> <i class="bi bi-twitter text-dark mx-1"></i> </a>
+                <a href="#"> <i class="bi bi-facebook text-dark mx-1"></i> </a>
+                <a href="#"> <i class="bi bi-linkedin text-dark mx-1"></i> </a>
+                <a href="#"> <i class="bi bi-instagram text-dark mx-1"></i> </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img
+                  src="https://randomuser.me/api/portraits/women/12.jpg"
+                  class="rounded-circle.mb-3"
+                  alt=""
+                />
+
+                <h3 class="card-title mb-3">Sara Smith</h3>
+                <p class="card-text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Incidunt quasi sunt esse harum dolorem accusantium.
+                </p>
+                <a href="#"> <i class="bi bi-twitter text-dark mx-1"></i> </a>
+                <a href="#"> <i class="bi bi-facebook text-dark mx-1"></i> </a>
+                <a href="#"> <i class="bi bi-linkedin text-dark mx-1"></i> </a>
+                <a href="#"> <i class="bi bi-instagram text-dark mx-1"></i> </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CONTACT AND MAP -->
+
+    <section class="p-5">
+      <div class="container">
+        <div class="row g-4">
+          <div class="col-md">
+            <h2 class="text-center mb-4">Contact Info</h2>
+
+            <ul class="list-group list-group-flush lead">
+              <li class="list-group-item">
+                <span class="fw-bold">Main Location:</span> 20 Main St Boston Ma
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Enrollment Phone:</span> (777)-777-222
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Student Phone:</span> (915)-029-623
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Enrollment Email:</span>
+                enroll@frontendbc.test
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">Student Email:</span>
+                student@frontendbc.test
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <div id="map"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="p-5 bg-dark text-white text-center position-relative">
+      <div class="container">
+        <p class="lead">Copyrigt &copy; 2023 Frontend Bootcamp</p>
+        <a href="#" class="position-absolute bottom-0 end-0 p-5">
+          <i class="bi bi-arrow-up-circle h1"></i>
+        </a>
+      </div>
+    </footer>
+
+    <!-- MODAL -->
+    <div
+      class="modal fade"
+      id="enroll"
+      tabindex="-1"
+      aria-labelledby="enrollLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="enrollLabel">Enrollment</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p class="lead">Fill out this form and we will get back to you</p>
+            <form>
+              <div class="mb-3">
+                <label for="first-name" class="col-form-label">
+                  First Name:
+                </label>
+                <input type="text" class="form-control" id="first-name" />
+              </div>
+              <div class="mb-3">
+                <label for="last-name" class="col-form-label">Last Name:</label>
+                <input type="text" class="form-control" id="last-name" />
+              </div>
+              <div class="mb-3">
+                <label for="email" class="col-form-label">Email:</label>
+                <input type="email" class="form-control" id="email" />
+              </div>
+              <div class="mb-3">
+                <label for="phone" class="col-form-label">Phone:</label>
+                <input type="tel" class="form-control" id="phone" />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
+
+    <script>
+      mapboxgl.accessToken =
+        "pk.eyJ1IjoiYnRyYXZlcnN5IiwiYSI6ImNrbmh0dXF1NzBtbnMyb3MzcTBpaG10eXcifQ.h5ZyYCglnMdOLAGGiL1Auw";
+      var map = new mapboxgl.Map({
+        container: "map",
+        style: "mapbox://styles/mapbox/streets-v11",
+        center: [-71.060982, 42.35725],
+        zoom: 18,
+      });
+    </script>
   </body>
 </html>
