Instructor's name changed

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                   alt=""
                 />
 
-                <h3 class="card-title mb-3">Jane Doe</h3>
+                <h3 class="card-title mb-3">Rabail Zaheer</h3>
                 <p class="card-text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Incidunt quasi sunt esse harum dolorem accusantium.
@@ -417,7 +417,7 @@
                   alt=""
                 />
 
-                <h3 class="card-title mb-3">Steve Smith</h3>
+                <h3 class="card-title mb-3">Sadaruddin</h3>
                 <p class="card-text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Incidunt quasi sunt esse harum dolorem accusantium.
